Separated the run types